moved jextract out of main build