@@ -27,133 +27,106 @@
 
 import static java.lang.System.out;
 
-static class Targets {
-    final Script.BuildDir buildDir;
-    final public Script.JarFile wrapJar;
-    final Script.JarFile clWrapJar;
-    final public Script.JarFile glWrapJar;
-    final public Script.JarFile cuWrapJar;
-    final public Script.JarFile hatJar;
-    final public Script.CMakeBuildDir cmakeBuildDir;
 
-    Targets(Script.BuildDir buildDir) {
-        this.buildDir = buildDir;
-        this.wrapJar = buildDir.jarFile("hat-wrap-1.0.jar");
-        this.clWrapJar = buildDir.jarFile("hat-clwrap-1.0.jar");
-        this.glWrapJar = buildDir.jarFile("hat-glwrap-1.0.jar");
-        this.cuWrapJar = buildDir.jarFile("hat-cuwrap-1.0.jar");
-        this.hatJar = buildDir.jarFile("hat-core-1.0.jar");
-
-        cmakeBuildDir = buildDir.cMakeBuildDir("cmake-build-debug");
-    }
-}
-
-static class Example {
+static class MavenStyleProject {
 
     Script.JarFile jarFile;
     Script.DirEntry dir;
     String name;
 
-    Example(Script.JarFile jarFile, Script.DirEntry dir, String name) {
+    MavenStyleProject(Script.JarFile jarFile, Script.DirEntry dir, String name) {
         this.jarFile = jarFile;
         this.dir = dir;
         this.name = name;
     }
 
-    static Example of(Script.BuildDir buildDir, Script.DirEntry dir) {
-        return new Example(buildDir.jarFile("hat-example-" + dir.fileName() + "-1.0.jar"), dir, dir.fileName());
+    static MavenStyleProject example(Script.BuildDir buildDir, Script.DirEntry dir) {
+        return new MavenStyleProject(buildDir.jarFile("hat-example-" + dir.fileName() + "-1.0.jar"), dir, dir.fileName());
     }
+    static MavenStyleProject javaBackend(Script.BuildDir buildDir, Script.DirEntry dir) {
+        return new MavenStyleProject(buildDir.jarFile("hat-backend-java-" + dir.fileName() + "-1.0.jar"), dir, dir.fileName());
+    }
+    static MavenStyleProject ffiBackend(Script.BuildDir buildDir, Script.DirEntry dir) {
+        return new MavenStyleProject(buildDir.jarFile("hat-backend-ffi-" + dir.fileName() + "-1.0.jar"), dir, dir.fileName());
+    }
+
+
 }
 
 void main(String[] args) {
-
-    /*
-     *  ./
-     *    +--build/                     All jars, native libs and executables
-     *    |    +--cmake-build-debug/    All intermediate cmake artifacts
-     *    |
-     *    +--stage/
-     *    |    +--repo/                 All downloaded maven assets (if any)
-     *    |    |
-     *    |    +--jextract/             All jextracted files
-     *    |    |    +--opencl
-     *    |    |    +--opengl
-     *    |    |    +--cuda
-     *    |
-     *    +--wrap/
-     *    |    +--wrap/                 All downloaded maven assets
-     *    |    |    +--wrap/                (*)
-     *    |    |    +--clwrap/              (*)
-     *    |    |    +--glwrap/              (*)
-     *    |    |    +--cuwrap/              (*)
-     *    |    |
-     *    |
-     *    +--extractions/
-     *    |    +--opencl/
-     *    |    +--opengl/
-     *    |    +--cuda/
-     *    |
-     *    +--hat-core                        * Note maven style layout
-     *    |    +--src/main/java
-     *    |    |    +--hat/
-     *    |    |
-     *    |    +--src/main/test
-     *    |         +--hat/
-     *    |
-     *    +--backends
-     *    |    +--java
-     *    |    |    +--mt                    (*)
-     *    |    |    +--seq                   (*)
-     *    |    +--jextracted
-     *    |    |    +--opencl                (*)
-     *    |    +--ffi
-     *    |         +--opencl                (*)
-     *    |         +--ptx                   (*)
-     *    |         +--mock                  (*)
-     *    |         +--spirv                 (*)
-     *    |         +--cuda                  (*)
-     *    |         +--hip                   (*)
-     *    |
-     *    +--examples
-     *    |    +--mandel                     (*)
-     *    |    +--squares                    (*)
-     *    |    +--heal                       (*)
-     *    |    +--life                       (*)
-     *    |    +--nbody                      (*)
-     *    |    +--experiments                (*)
-     *    |    +--violajones                 (*)
-     *
-     */
+    var layout = """     
+       └──./
+           ├──hat                                      //  All build scripts in each case 'foo' has java options for (and points to) 'foo.java'
+           │    ├──bld                                 //  --enable-preview --source 24 hat/bld.java
+           │    ├──bld.java
+           │    ├──run                                 //  --enable-preview --source 24 hat/run.java
+           │    ├──run.java
+           │    └──Script                              //  Contains all the tools for building
+           │
+           ├──build/                                   // All jars, native libs and executables
+           │    └──cmake-build-debug/                  // All intermediate cmake artifacts
+           │        ├── hat-*wrap-1.0.jar              // Wrapper jars around extracted * (clwrap, glwrap, cuwrap)
+           │        ├── hat-core-1.0.jar               // Base hat jar
+           │        ├── hat-example-*-1.0.jar          // Example jars (hat-example-nbody-1.0.jar, hat-example-life-1.0.jar)
+           │        ├── hat-jextracted-opencl-1.0.jar  // Raw jextracted jars (hat-jextracted-opencl-1.0.jar ....)
+           │        ├── lib*_backend.[dylib|so]        // ffi library backends
+           │        └── *(no suffix)                   // various generated executables (opencl_info, cuda_info, cuda_squares)
+           ├──stage/
+           │   ├── repo/
+           │   │   └── *                               // Maven artifacts (poms and jars)
+           │   ├── opencl_jextracted/                  // All jextracted files (created using java @hat/extract
+           │   │   ├── compile_flags.txt
+           │   │   └── opencl
+           │   ├── cuda_jextracted/
+           │   │   ├── compile_flags.txt
+           │   │   └── cuda
+           │   └── opengl_jextracted/
+           │       ├── compile_flags.txt
+           │       └── opengl
+           ├──wrap/
+           │    └──wrap/
+           │         ├──wrap/                          // Maven style layout
+           │         ├──clwrap/                        // Maven style layout
+           │         ├──glwrap/                        // Maven style layout
+           │         └──cuwrap/                        // Maven style layout
+           │
+           ├──hat-core                                 // Maven style layout
+           │    ├──src/main/java
+           │    │    └──hat/
+           │    │
+           │    └──src/main/test
+           │         └──hat/
+           │
+           ├──backends
+           │    ├──java
+           │    │    ├──mt                             // Maven style layout
+           │    │    └──seq                            // Maven style layout
+           │    ├──jextracted
+           │    │    └──opencl                         // Maven style layout
+           │    └──ffi
+           │         ├──opencl                         // Maven style layout with cmake
+           │         ├──ptx                            // Maven style layout with cmake
+           │         ├──mock                           // Maven style layout with cmake
+           │         ├──spirv                          // Maven style layout with cmake
+           │         ├──cuda                           // Maven style layout with cmake
+           │         └──hip                            // Maven style layout with cmake
+           │
+           └──examples
+                ├──mandel                              // Maven style layout
+                ├──squares                             // Maven style layout
+                ├──heal                                // Maven style layout
+                ├──life                                // Maven style layout
+                ├──nbody                               // Maven style layout
+                ├──experiments                         // Maven style layout
+                └──violajones                          // Maven style layout
+       """;
 
     var dir = Script.DirEntry.current();
-    var hatCoreDir = dir.existingDir("hat-core");
-    var backends = dir.existingDir("backends");
-    var examplesDir = dir.existingDir("examples");
-    var wrapsDir = dir.existingDir("wrap");
-    var stageDir = dir.buildDir("stage").create();
-
     var buildDir = Script.BuildDir.of(dir.path("build")).create();
-    var targets = new Targets(buildDir);
-
-
-    var openclCapability = Script.Capabilities.OpenCL.of();
-    var openglCapability = Script.Capabilities.OpenGL.of();
-    var cudaCapability = Script.Capabilities.CUDA.of();
-    var hipCapability = Script.Capabilities.HIP.of();
-    var jextractCapability = Script.Capabilities.JExtract.of();// or Capability.JExtract.of(Path.of("/my/jextract-22/bin/jextract"));
-    var cmakeCapability = Script.Capabilities.CMake.of();
-
-    Script.Capabilities capabilities = Script.Capabilities.of(openclCapability, openglCapability, cudaCapability, hipCapability, jextractCapability, cmakeCapability);
-
-    if (cmakeCapability.available()) {
-        cmakeCapability.probe(buildDir, capabilities);
-    }
-
-    capabilities.capabilities().forEach(fw -> out.print("[" + fw.name + (fw.available() ? "\u2714" : "\u2715") + "]"));
-    out.println();
-
-    var verbose = false;
-
+    var cmakeCapability = Script.Capabilities.CMake.required();
+    Script.Capabilities capabilities = Script.Capabilities.of( cmakeCapability);
+    cmakeCapability.probe(buildDir, capabilities);
+    out.println(capabilities.tickOrCheck());
 
     var hatJavacOpts = Script.javacBuilder($ -> $
             .enable_preview()
@@ -162,195 +135,185 @@ void main(String[] args) {
     );
 
     var hatJarOptions = Script.jarBuilder($ -> $
-            .verbose(verbose)
-    );
-    Script.jar(hatJarOptions, jar -> jar
-            .jarFile(targets.hatJar)
-            .maven_style_root(hatCoreDir)
-            .javac(hatJavacOpts, javac -> {
-            })
+            .verbose(false)
     );
 
+    var hatCoreDir = dir.existingDir("hat-core");
+    var hatCoreJar = buildDir.jarFile("hat-core-1.0.jar");
+
+    var cmakeBuildDir = buildDir.cMakeBuildDir("cmake-build-debug");
+
+    Script.jar(hatJarOptions, jar -> jar
+            .jarFile(hatCoreJar)
+            .maven_style_root(hatCoreDir)
+            .javac(hatJavacOpts, javac -> {})
+    );
+
+    var wrapsDir = dir.existingDir("wrap");
+
+    var wrapDir = wrapsDir.existingDir("wrap");
+    var wrapJar = buildDir.jarFile("hat-wrap-1.0.jar");
+
     Script.jar(jar -> jar
-            .jarFile(targets.wrapJar)
-            .maven_style_root(wrapsDir.dir("wrap"))
+            .jarFile(wrapJar)
+            .maven_style_root(wrapDir)
             .javac(javac -> javac.current_source())
     );
 
-    if (jextractCapability.available()) {
-        if (openclCapability.available()) {
-            if (!openclCapability.jarFile(buildDir).exists()) {
-                if (!openclCapability.stage(stageDir).exists()) {
-                    Script.jextract(jextractCapability.executable, $ -> $.verbose(verbose).capability(openclCapability, stageDir));
-                } else {
-                    out.println("Using previously extracted  " + openclCapability.stage(buildDir).fileName());
-                }
-                Script.jar(jar -> jar
-                        .jarFile(openclCapability.jarFile(buildDir))
-                        .javac(javac -> javac.current_source().source_path(Script.SourceDir.of(openclCapability.stage(stageDir).path())))
 
+    var clWrapJar = buildDir.jarFile("hat-clwrap-1.0.jar");
+    var clwrapDir = wrapsDir.dir("clwrap");
+    var extractedOpenCLJar = buildDir.jarFile("hat-jextracted-opencl-1.0.jar");
+
+    if (clwrapDir.exists() && extractedOpenCLJar.exists()) {
+        Script.jar(jar -> jar
+                        .jarFile(clWrapJar)
+                        .maven_style_root(clwrapDir)
+                        .javac(javac ->
+                                javac.current_source()
+                                        .class_path(wrapJar, hatCoreJar, extractedOpenCLJar))
                 );
-            } else {
-                out.println("Using existing extracted " + openclCapability.jarFile(buildDir).fileName());
-            }
-            Script.jar(jar -> jar
-                    .jarFile(targets.clWrapJar)
-                    .maven_style_root(wrapsDir.dir("clwrap"))
-                    .javac(javac -> javac.current_source().class_path(targets.wrapJar, targets.hatJar, openclCapability.jarFile(buildDir)))
-            );
-        } else {
-            out.println("This platform does not have OpenCL");
-        }
-
-        if (openglCapability.available()) {
-            if (!openglCapability.jarFile(buildDir).exists()) {
-                if (!openglCapability.stage(stageDir).exists()) {
-                    Script.jextract(jextractCapability, $ -> $.verbose(verbose).capability(openglCapability, stageDir));
-                } else {
-                    out.println("Using previously extracted  " + openglCapability.stage(buildDir).fileName());
-                }
-                Script.jar(jar -> jar
-                        .jarFile(openglCapability.jarFile(buildDir))
-                        .javac(javac -> javac.current_source().source_path(Script.SourceDir.of(openglCapability.stage(stageDir).path())))
-                );
-            } else {
-                out.println("Using existing extracted " + openglCapability.jarFile(buildDir).fileName());
-            }
-            Script.jar(jar -> jar
-                    .jarFile(targets.glWrapJar)
-                    .maven_style_root(wrapsDir.dir("glwrap"))
-                    .javac(javac -> javac
-                            .current_source()
-                            .exclude(javaSrc -> javaSrc.matches("^.*/wrap/glwrap/GLCallbackEventHandler\\.java$"))
-                            //.exclude(javaSrc -> javaSrc.matches("^.*/wrap/glwrap/GLFuncEventHandler\\.java$"))
-                            .class_path(targets.wrapJar, openglCapability.jarFile(buildDir))
-                    )
-            );
-        } else {
-            out.println("This platform does not have OpenGL");
-        }
-
-
-        if (cudaCapability.available()) {
-
-        } else {
-            out.println("This platform does not have CUDA");
-        }
+    }else{
+        println("Skipping OPENCL and dependencies ");
     }
 
-    var backendJars = new ArrayList<Script.JarFile>();
+    var glWrapJar = buildDir.jarFile("hat-glwrap-1.0.jar");
+    var glwrapDir = wrapsDir.dir("glwrap");
+    var extractedOpenGLJar = buildDir.jarFile("hat-jextracted-opengl-1.0.jar");
+    if (glwrapDir.exists() && extractedOpenGLJar.exists()) {
+        Script.jar(jar -> jar
+                .jarFile(glWrapJar)
+                .maven_style_root(glwrapDir)
+                .javac(javac -> javac
+                        .current_source()
+                        .exclude(javaSrc -> javaSrc.matches("^.*/wrap/glwrap/GLCallbackEventHandler\\.java$"))
+                        //.exclude(javaSrc -> javaSrc.matches("^.*/wrap/glwrap/GLFuncEventHandler\\.java$"))
+                        .class_path(wrapJar,extractedOpenGLJar)
+                )
+        );
+    }else{
+        println("Skipping OPENGL and dependencies ");
+    }
 
+
+    var cuWrapJar = buildDir.jarFile("hat-cuwrap-1.0.jar");
+    var cuwrapDir = wrapsDir.dir("cuwrap");
+    var extractedCudaJar = buildDir.jarFile("hat-jextracted-cuda-1.0.jar");
+    if (cuwrapDir.exists() && extractedCudaJar.exists()) {
+
+    }else{
+        println("Skipping CUDA and dependencies");
+    }
+
+
+    var backends = dir.existingDir("backends");
 
     // Here we create all ffi-backend jars.
     var ffiBackends = backends.existingDir("ffi");
-    var ffiBackendSharedDir = ffiBackends.dir("shared");
-    out.println("Shared ffi " + ffiBackendSharedDir.path());
-    var ffiSharedBackendJar = buildDir.jarFile("hat-backend-ffi-shared-1.0.jar");
-    backendJars.add(ffiSharedBackendJar);
-    var ffiBackendSharedResult = Script.jar(hatJarOptions, jar -> jar
-            .jarFile(ffiSharedBackendJar)
-            .maven_style_root(ffiBackendSharedDir)
-            .javac(hatJavacOpts, javac -> javac.verbose(verbose)
-                    .class_path(targets.hatJar)
-            )
-    );
-
+    var ffiBackendSharedJar = buildDir.jarFile("hat-backend-ffi-shared-1.0.jar");
     ffiBackends.subDirs()
-            .filter(backend -> backend.failsToMatch("^.*(spirv|hip|ptx|shared|target|cmake-build-debug|.idea)$"))
-            .forEach(backend -> {
-                var ffiBackendJarFile = buildDir.jarFile("hat-backend-ffi-" + backend.fileName() + "-1.0.jar");
-                backendJars.add(ffiBackendJarFile);
-                out.println(ffiBackendJarFile.fileName());
+            .filter(backend -> backend.matches("^.*(shared|mock|opencl)$"))
+            .sorted(new Comparator<Script.DirEntry>() {
+                @Override
+                public int compare(Script.DirEntry lhs, Script.DirEntry rhs) {
+                    return rhs.fileName().compareTo(lhs.fileName()); // reverse sorted we want shared first ;)
+                }
+            })
+            .map(javaBackend->MavenStyleProject.ffiBackend(buildDir,javaBackend))
+            .forEach(msp -> {
                 Script.jar(hatJarOptions, jar -> jar
-                        .jarFile(ffiBackendJarFile)
-                        .maven_style_root(backend)
-                        .javac(hatJavacOpts, javac -> javac.class_path(targets.hatJar, ffiSharedBackendJar))
+                        .jarFile(msp.jarFile)
+                        .maven_style_root(msp.dir)
+                        .javac(hatJavacOpts, javac ->
+                                javac.either(msp.name.equals("shared"),
+                                        _-> javac.class_path(hatCoreJar),
+                                        _-> javac.class_path(hatCoreJar, ffiBackendSharedJar)
+                                )
+                        )
                 );
+                out.println(msp.jarFile.fileName()+ " OK");
             });
 
-    // Here we create jextracted-backend jars.
     var jextractedBackends = backends.existingDir("jextracted");
     var jextractedBackendSharedDir = jextractedBackends.dir("shared");
-    out.println("Shared jextracted " + jextractedBackendSharedDir.path());
     var jextractedSharedBackendJar = buildDir.jarFile("hat-backend-jextracted-shared-1.0.jar");
-    backendJars.add(jextractedSharedBackendJar);
-    var jextractedBackendSharedResult = Script.jar(hatJarOptions, jar -> jar
+
+    Script.jar(hatJarOptions, jar -> jar
             .jarFile(jextractedSharedBackendJar)
             .maven_style_root(jextractedBackendSharedDir)
-            .javac(hatJavacOpts, javac -> javac.verbose(verbose)
-                    .class_path(targets.hatJar)
-            )
+            .javac(hatJavacOpts, javac -> javac.class_path(hatCoreJar))
     );
+    out.println(jextractedSharedBackendJar.fileName()+ " OK");
 
-    if (openclCapability.available()) {
-        var jextractedBackendOpenCLDir = jextractedBackends.dir("opencl");
-        out.println("OpenCL jextracted " + jextractedBackendOpenCLDir.path());
+    var jextractedBackendOpenCLDir = jextractedBackends.dir("opencl");
+    if ( jextractedBackendOpenCLDir.exists() && extractedOpenCLJar.exists()) {
         var jextractedOpenCLBackendJar = buildDir.jarFile("hat-backend-jextracted-opencl-1.0.jar");
-        backendJars.add(jextractedOpenCLBackendJar);
         Script.jar(hatJarOptions, jar -> jar
                 .jarFile(jextractedOpenCLBackendJar)
                 .maven_style_root(jextractedBackendOpenCLDir)
-                .javac(hatJavacOpts, javac -> javac.verbose(verbose)
-                        .class_path(targets.hatJar, openclCapability.jarFile(buildDir), jextractedBackendSharedResult)
+                .javac(hatJavacOpts, javac -> javac
+                        .class_path(hatCoreJar, extractedOpenCLJar, jextractedSharedBackendJar)
                 )
         );
+        out.println(jextractedOpenCLBackendJar.fileName()+ " OK");
     }
 
 
     // Here we create all java backend jars.
     backends.existingDir("java")
             .subDirs()
-            .filter(backend -> backend.failsToMatch("^.*(target|.idea)$"))
-            .forEach(backend -> {
-                var backendJavaJar = buildDir.jarFile("hat-backend-java-" + backend.fileName() + "-1.0.jar");
-                out.println(backendJavaJar.fileName());
-                backendJars.add(backendJavaJar);
+            .filter(backend -> backend.matches("^.*(mt|seq)$"))
+            .map(javaBackend->MavenStyleProject.javaBackend(buildDir,javaBackend))
+            .forEach(msp -> {
                 Script.jar(hatJarOptions, jar -> jar
-                        .jarFile(backendJavaJar)
-                        .dir_list(backend.dir("src/main/resources"))
+                        .maven_style_root(msp.dir)
+                        .jarFile(msp.jarFile)
+                        .javac(javac->javac.class_path(hatCoreJar))
                 );
+                out.println(msp.jarFile.fileName()+" OK");
             });
 
-    backendJars.forEach(j -> out.println(" backend " + j.path()));
+    var examplesDir = dir.existingDir("examples");
 
-    examplesDir.subDirs()
+    examplesDir
+            .subDirs()
             .filter(exampleDir -> exampleDir.failsToMatch("^.*(experiments|target|.idea)$"))
-            .map(exampleDir -> Example.of(targets.buildDir, exampleDir))
-            .forEach(example -> {
-                out.println(example.jarFile.fileName());
+            .map(exampleDir -> MavenStyleProject.example(buildDir, exampleDir))
+            .forEach(msp -> {
+                out.println(msp.jarFile.fileName());
                 Script.jar(hatJarOptions, jar -> jar
-                        .jarFile(example.jarFile)
-                        .maven_style_root(example.dir)
+                        .jarFile(msp.jarFile)
+                        .maven_style_root(msp.dir)
                         .javac(hatJavacOpts, javac ->
-                                javac.class_path(targets.hatJar)
-                                        .when(example.dir.matches("^.*(nbody)$")
-                                           && jextractCapability.available()
-                                           && openclCapability.available()
-                                            && openglCapability.available(), _ ->
-                                                javac.class_path(targets.wrapJar,
-                                                        targets.clWrapJar, openclCapability.jarFile(buildDir),
+                                javac.class_path(hatCoreJar)
+                                        .when(msp.dir.matches("^.*(nbody)$")
+                                                && extractedOpenCLJar.exists() && clWrapJar.exists()
+                                                && extractedOpenGLJar.exists() && glWrapJar.exists()
+                                                , _ ->
+                                                javac.class_path(wrapJar,
+                                                        clWrapJar, extractedOpenCLJar,
                                                         buildDir.jarFile("hat-backend-ffi-opencl-1.0.jar"),
-                                                        targets.glWrapJar, openglCapability.jarFile(buildDir)
+                                                        glWrapJar, extractedOpenGLJar
 
                                                 )
                                         )
                         )
-                        .manifest(manifest -> manifest.main_class(example.name + ".Main"))
+                        .manifest(manifest -> manifest.main_class(msp.name + ".Main"))
                 );
             });
 
 
     if (cmakeCapability.available()) {
-        if (!targets.cmakeBuildDir.exists()) {
+        if (!cmakeBuildDir.exists()) {
             Script.cmake($ -> $
-                    .verbose(verbose)
+                    .verbose(false)
                     .source_dir(ffiBackends)
-                    .build_dir(targets.cmakeBuildDir)
+                    .build_dir(cmakeBuildDir)
                     .copy_to(buildDir)
             );
         }
         Script.cmake($ -> $
-                .build(targets.cmakeBuildDir)
+                .build(cmakeBuildDir)
         );
     } else {
         out.println("No cmake available so we did not build ffi backend shared libs");
